<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BillPredict</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_history">History</string>
    <string name="action_about">About</string>
    <string name="action_average">Daily Average</string>
    <string name="title_activity_main_tab">BillPredict</string>
    <string name="title_section1">Water</string>
    <string name="title_section2">Electricity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_data_dialog_title">No Data</string>
    <string name="no_data_dialog_message">Currently there is no data to display here, please keep using the app
        and return to this screen after a few days</string>
    <string name="edit_reading_dialog_title">Edit Reading</string>
    <string name="edit_reading_dialog_message">Change or remove the reading for a particular day</string>
    <string name="welcome_dialog_title">Welcome to BillPredict</string>
    <string name="welcome_dialog_message">Please set up the dates and readings of your previous cycles.\n
        If you do not set the dates, today\'s date will be considered as the last date of the cycles by default.\n
        In case you do not remember the last reading, then you must update the meter reading for two days,
        to start getting results.\n
        Once you\'re done, press back to return to the main screen</string>
    <string name="monthly_notice">It\'s been 30 days since your cycle started.
        If it has ended, please update the settings</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">BillPredict</string>
    <string name="title_activity_about">About</string>
    <string name="about_paragraph_1">This app is brought developed by Zenatix</string>
    <string name="about_paragraph_2">This application is currently only useful for people living in Delhi</string>
    <string name="about_paragraph_3">Water tariff used (per unit): Rs 2.66 (0-10),Rs 3.99 (10-20),
        Rs 19.97 (20-30),Rs 33.28f (>30) \n
    Electricity tariff used (per unit): Rs 4 (0-200),Rs 5.45 (200-400),Rs 7.95 (>400)</string>
    <string name="about_paragraph_4">We use linear interpolation of daily usage to calculate
        the predicted consumption and estimated bill</string>
    <string name="about_paragraph_5">Subsidies that are included for calculation of costs are as per
        the government order dated February 26 that gives up to 20 KL of water free for each connection
        and 50% subsidy on electricity consumption (for consumption less than 400 units a month)</string>
    <string name="about_paragraph_6">Estimated bill is only based on price per unit and does not include
        any other charges and taxes</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_graph">Daily Average</string>
    <string name="title_section3">Section 3</string>

</resources>
