<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.ac.iiitd.zenatix.billpredict.MainTabActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_history" android:title="@string/action_history"
        android:orderInCategory="101" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/action_help"
        android:orderInCategory="104" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="105" app:showAsAction="never" />
    <item android:id="@+id/action_average" android:title="@string/action_average"
        android:orderInCategory="103" app:showAsAction="never" />
</menu>
