<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:background="@color/primaryDark"
    tools:context="com.app.android.zenatix.billpredict.MenuActivities.AboutActivity">

    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_1"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:textColor="#ffffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_2"
            android:id="@+id/textView5"
            android:padding="10dp"
            android:textColor="#ffffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_3"
            android:id="@+id/textView6"
            android:padding="10dp"
            android:textColor="#ffffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_4"
            android:id="@+id/textView7"
            android:padding="10dp"
            android:textColor="#ffffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_5"
            android:id="@+id/textView8"
            android:padding="10dp"
            android:textColor="#ffffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_paragraph_6"
            android:id="@+id/textView9"
            android:padding="10dp"
            android:textColor="#ffffffff"/>

    </LinearLayout>
</ScrollView>

